# newslyze-final-proj

./: .gitignore  01_scrape_guardian.ipynb  02_classify_subtopics.ipynb  03_sentiment_scoring.ipynb  04_engineer_timeseries.ipynb  05_mining_analysis.ipynb  06_cluster_others.ipynb  07_forecast_subtopics.ipynb  main.py  pyproject.toml  report.typ  report2.typ
data/: forecast_summary.csv  forecasts.csv  timeseries.csv  timeseries_wide.csv
