[project]
name = "newslyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.4",
    "hdbscan>=0.8.41",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pmdarima>=2.1.1",
    "prophet>=1.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "umap-learn>=0.5.11",
    "vadersentiment>=3.3.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
